# hackathon-multi-user-full-stack-todo-app

./: .env.example  .gitignore  CLAUDE.md  PROJECT_STRUCTURE.md  README.md  docker-compose.yml
.claude/agents/: database-schema-designer.md  fastapi-backend-builder.md  nextjs-frontend-builder.md  spec-architect.md
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/db/: __init__.py  db.py
backend/app/dependencies/: auth.py  session.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  models.py  task.py  task_crud.py
backend/app/routes/: tasks.py
backend/app/schemas/: __init__.py  task.py  task_schemas.py
backend/app/services/: session.py
backend/app/utils/: logger.py
backend/tests/: README.md  conftest.py  run_auth_tests.py  test_auth_flow.py  test_session_management.py  verify_auth_implementation.py
backend/tests/integration/: test_database.py
backend/tests/unit/: test_models.py
docs/: session-management.md
frontend/: CLAUDE.md  Dockerfile  README.md  package-lock.json  package.json
specs/: architecture.md  overview.md
specs/001-project-foundation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-db-schema/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-better-auth/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-fix-better-auth-integration/: data-model.md  plan.md  quickstart.md  spec.md  (+2 more)
(+103 files in other folders)
